[gd_scene load_steps=2 format=3 uid="uid://cl8q8f32imusk"]

[ext_resource type="Script" path="res://game/start_scene/start_ui.gd" id="1_n87es"]

[node name="StartUI" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_n87es")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="MainMenu" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="NewGameBtn" type="Button" parent="VBoxContainer/MainMenu"]
layout_mode = 2
text = "New game"

[node name="OptionsBtn" type="Button" parent="VBoxContainer/MainMenu"]
visible = false
layout_mode = 2
text = "Options
"

[node name="ExitBtn" type="Button" parent="VBoxContainer/MainMenu"]
layout_mode = 2
text = "Quit"

[node name="Options" type="VBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="BackBtn" type="Button" parent="VBoxContainer/Options"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Back	"

[connection signal="pressed" from="VBoxContainer/MainMenu/NewGameBtn" to="." method="_on_new_game_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenu/ExitBtn" to="." method="_on_exit_btn_pressed"]
